TheMightyDude (18 July 2012)
--------------------------------------
Temp hack/fix for the player log until we have a better way to do it.

TheMightyDude (17 July 2012)
--------------------------------------
Fixed missing 'amount' field in IGB_transfers error.
Fixed mail.php, it now sends the email with the password.
Fixed lanuage ini files for email needs to be \r\n and not just \n
Fixed l_mail_topic in language ini files so that they all use [game_name]
Removed the mailer_class.php due to its not used.
Fixed feedback.php to use mail() and cleaned up code a bit.
Updated perfmon.php to now require the admin password.
Updated create_universe.php to display the importing of the languages into the same html table as the rest.
Updated schema.php, we now only create the table if it doesn't already exist.
Updated checklogin.php file to update the players online status, this was missing, updates ever 60 seconds.
Updated admin.php to allow setting special ports into sectors.
Fixed Notice: Use of undefined constant team_name - assumed 'team_name'
Fixed genscore() when player has no planets.
Fixed invalid character in header.php
Fixed Notice: Use of undefined constant amount - assumed 'amount' in sched_news.php
Fixed Notice: Undefined variable: db_logging in traderoute.php
Fixed Notice: Undefined index: scooped1 and scooped2 in traderoute.php

TheKabal (21 June 2012)
--------------------------------------
Massive lists of fixes to PHP notices
Changes to bring all pages to a common coding style guideline level (in progress)
Eliminated global_funcs (see global_includes instead), eliminated several functions, and moved others into individual files
Greatly simplified the style & html for login, index, and main resulting in a single stylesheet they currently use
Added German language to game

TheKabal (3 May 2012)
--------------------------------------
Merged patch for teams.php from rjordan (SF Patch # 906580): revision 1450