@@ -1,6 +1,7 @@
 TheMightyDude (18 July 2012)
 --------------------------------------
 Temp hack/fix for the player log until we have a better way to do it.
+Fixed bug in main.php, readmail.php, mailto2.php Notice: Use of undefined constant ship_id - assumed 'ship_id' 
 
 TheMightyDude (17 July 2012)
 --------------------------------------
